[ci skip] Pushing deployment files for namespace, service accounts and clusterrolebinding
Signed-off-by: deepshishetty <deepshishetty06@gmail.com>

--- a/readSecrets.yaml
+++ b/readSecrets.yaml
@@ -1,11 +1,30 @@
 - hosts: ansible_provisioners
-  become: yes
-  #remote_user: root
+  become: yes  
   gather_facts: yes
   tasks:
-  - name: find disk space available.
-    command: vault kv get secretsv2/crypto/peerOrganizations/carrier-net/peers/peer0.carrier-net/msp/ 
-    register: result 
-  - name: Print-Value
+  - name: Check if pip env exists
+    command: pip --version
+    register: pip_env_check
+  - name: Install Python pip
+    apt: name={{ item }} update_cache=true state=present force_apt_get=yes
+    with_items:
+    - python-pip
+    - python3-pip
+    when: pip_env_check.stdout.find('no packages found') != -1
+  - name: "Install hvac"
+    pip: 
+      name: hvac
+    when: pip_env_check.stdout.find('no packages found') != -1
+  - name: get secrets-1
+    command: vault kv get -field=admincerts secretsv2/crypto/peerOrganizations/carrier-net/peers/peer0.carrier-net/msp/
+    register: result
+  - name: print
     debug:
       var: result.stdout
+  - name: get secrets-2 
+    set_fact:
+      my_secret: "{{ lookup('hashi_vault','secretsv2/data/crypto/peerOrganizations/carrier-net/peers/peer0.carrier-net/msp:admincerts',token='root', url='http://20.214.139.200:8200', as='raw') }}"
+  - name: print-2 
+    debug:
+      var: "{{my_secret['data']['data']['admincerts'] }}"
+ 
