[ci skip] Pushing deployment files for namespace, service accounts and clusterrolebinding
Signed-off-by: deepshishetty <deepshishetty06@gmail.com>

--- a/copySecrets.yaml
+++ b/copySecrets.yaml
@@ -5,6 +5,8 @@
   - name: Check if pip env exists
     command: pip --version
     register: pip_env_check
+    debug:
+      var: pip_env_check
   - name: Install Python pip
     apt: name={{ item }} update_cache=true state=present force_apt_get=yes
     with_items:
@@ -29,9 +31,13 @@
       my_secret: "{{ lookup('hashi_vault','secretsv2/data/crypto/peerOrganizations/carrier-net/peers/peer0.carrier-net/msp:admincerts',token='root', url='http://20.214.139.200:8200', as='raw') }}"
   - name: print-2 
     debug:
-      msg: "{{ my_secret['data']['data']['admincerts'] }}"
+      msg: "{{my_secret['data']['data']['admincerts'] }}"
+  ####################################################################################
+
   - name: copy files to the destination
     copy:
-      src: "{{my_secret['data']['data'] }}"
-      dest: "/ex/data/msp/"   
+      src: "{{my_secret['data']['data']['admincerts'] }}"
+      dest: "/ex/data/msp/"
+
+
  
