[ci skip] Pushing deployment files for namespace, service accounts and clusterrolebinding
Signed-off-by: deepshishetty <deepshishetty06@gmail.com>

--- a/.kube/config
+++ b/.kube/config
@@ -1,21 +1,21 @@
 apiVersion: v1
 clusters:
 - cluster:
-    certificate-authority: /home/bevel/build/ca.crt
+    certificate-authority: /home/dsBlockchain/.minikube/ca.crt
     extensions:
     - extension:
-        last-update: Thu, 08 Dec 2022 09:55:08 UTC
+        last-update: Sun, 08 Jan 2023 15:44:40 UTC
         provider: minikube.sigs.k8s.io
         version: v1.28.0
       name: cluster_info
-    server: https://20.214.139.200:18443
+    server: https://20.204.81.154:18443
   name: minikube
 contexts:
 - context:
     cluster: minikube
     extensions:
     - extension:
-        last-update: Thu, 08 Dec 2022 09:55:08 UTC
+        last-update: Sun, 08 Jan 2023 15:44:40 UTC
         provider: minikube.sigs.k8s.io
         version: v1.28.0
       name: context_info
@@ -28,6 +28,5 @@ preferences: {}
 users:
 - name: minikube
   user:
-    client-certificate: /home/bevel/build/client.crt
-    client-key: /home/bevel/build/client.key
-
+    client-certificate: /home/dsBlockchain/.minikube/profiles/minikube/client.crt
+    client-key: /home/dsBlockchain/.minikube/profiles/minikube/client.key
