--- a/.kube/config
+++ b/.kube/config
@@ -1,7 +1,7 @@
 apiVersion: v1
 clusters:
 - cluster:
-    certificate-authority: /home/dsBlockchain/.minikube/ca.crt
+    certificate-authority: /home/bevel/build/ca.crt
     extensions:
     - extension:
         last-update: Sun, 08 Jan 2023 15:44:40 UTC
@@ -28,5 +28,5 @@ preferences: {}
 users:
 - name: minikube
   user:
-    client-certificate: /home/dsBlockchain/.minikube/profiles/minikube/client.crt
-    client-key: /home/dsBlockchain/.minikube/profiles/minikube/client.key
+    client-certificate: /home/bevel/build/client.crt
+    client-key: /home/bevel/build/client.key
